	     runtime type system had it the wrong way around; see
	     Examples/guile/test-suite/casts.i
	   * Make typemaps for SWIGPOINTER * with arg name take
	     precedence over those without arg name, to match normal
	     typemap precedence rules.
	   * Fixed the random-line-numbers problem reported as SF bug
	     #217310; thanks to Michael Scharf <scharf@users.sf.net>.

6/14/2001: beazley
           Made a minor change to the way files are loaded in
           order to get file/line number reporting correct in
           the preprocessor.

6/14/2001: mkoeppe
	   * The parser now understands the (non-standard) "long long"
	     types. It is up to the individual language modules to
	     provide typemaps if needed. Reported by Sam Steingold, SF
	     bug #429176.
	   * The parser now understands arguments like "const int *
	     const i". This fixes SF bug #215649.
	   * Fixed the Guile test-suite.

6/13/2001: mkoeppe
	   Partial merge from the CVS trunk at tag
	   "mkoeppe-merge-1". This covers the following changes:

| 01/16/01: ttn
|	   Wrote table of contents for Doc/engineering.html.  Added section
|	   on CVS tagging conventions.  Added copyright to other docs.
| 9/25/00 : beazley
| 	   Modified the preprocessor so that macro names can start with a '%'.
| 	   This may allow new SWIG "directives" to be defined as macros instead
| 	   of having to be hard-coded into the parser.  
|
| *** Also a yet-to-be-documented quoting mechanism with backquotes
| *** has been implemented?

6/13/2001: mkoeppe
	 * When configure does not find a language, don't use default
	   paths like /usr/local/include; this only causes build
	   problems.
	 * New directory: Examples/Guile/test-suite, where a few
	   bugs in 1.3a5 are demonstrated. 
	 * Handle C++ methods that have both a "const" and a "throw"
	   directive (see Examples/Guile/test-suite/cplusplus-throw.i); 
	   thanks to Scott B. Drummonds for the report and the fix. 