@@ -31,6 +31,8 @@ trunk of the CVS tree.
 	     typemap precedence rules.
 	   * Fixed the random-line-numbers problem reported as SF bug
 	     #217310; thanks to Michael Scharf <scharf@users.sf.net>.
+	   * [Guile]: Added a "name" pragma which allows to change the
+	     Scheme name of the generated procedures.
 
 6/14/2001: beazley
            Made a minor change to the way files are loaded in
